discovery-frontend/src/assets/css/metatron/popup/metatron.popup.02Workbook_ChartMap.css
@charset "utf-8";

/**************************************************************
  popup : 맵 차트
**************************************************************/
.ddp-page-mapview .ddp-btn-color-heatmap1 {background:url(../../../images/img_color_heatmap_type1.png) no-repeat; }
.ddp-page-mapview .ddp-btn-color-heatmap2 {background:url(../../../images/img_color_heatmap_type2.png) no-repeat;}
.ddp-page-mapview .ddp-btn-color-heatmap3 {background:url(../../../images/img_color_heatmap_type3.png) no-repeat;}
.ddp-page-mapview .ddp-btn-color-heatmap4 {background:url(../../../images/img_color_heatmap_type4.png) no-repeat;}
.ddp-page-mapview .ddp-btn-color-heatmap5 {background:url(../../../images/img_color_heatmap_type5.png) no-repeat;}
.ddp-page-mapview .ddp-btn-color-heatmap6 {background:url(../../../images/img_color_heatmap_type6.png) no-repeat;}
.ddp-page-mapview .ddp-btn-color-heatmap7 {background:url(../../../images/img_color_heatmap_type7.png) no-repeat;}
.ddp-page-mapview .ddp-box-down .ddp-wrap-divide .ddp-divide2 .ddp-wrap-colorby-button.ddp-solid-color {padding-left:0;height:25px;}

.ddp-page-mapview .ddp-box-down .ddp-wrap-divide .ddp-divide2 .ddp-wrap-colorby-button.ddp-solid-color .sp-preview,
.ddp-page-mapview .ddp-box-down .ddp-wrap-divide .ddp-divide2 .ddp-wrap-colorby-button.ddp-solid-color .sp-replacer{width:100%; height:100%;}
.ddp-page-mapview .ddp-box-down .ddp-wrap-divide .ddp-divide2 .ddp-wrap-colorby-button.ddp-solid-color .sp-preview:before {display:inline-block; position:absolute; top:0; left:0; width:26px; height:25px; background:url(../../../images/btn_color.png) no-repeat; content:''; background-color:#fff; border-radius:3px; z-index:1;}
.ddp-page-mapview .ddp-box-down .ddp-wrap-divide .ddp-divide2 .ddp-wrap-colorby-button.ddp-solid-color .sp-preview-inner {position:absolute; top:0; left:0; right:0; bottom:0;}
.ddp-page-mapview .ddp-box-color .ddp-solid-color .sp-replacer.sp-active:before,
.ddp-page-mapview .ddp-box-color .ddp-solid-color .sp-replacer.sp-active:after,
.ddp-box-color .ddp-solid-color .sp-replacer.sp-active{border:none;}

.ddp-page-mapview .ddp-ui-drop-contents ul.ddp-list-source li em[class*="ddp-icon-mapview"] {position:absolute; top:6px; left:18px;}
.ddp-page-mapview .ddp-ui-drop-contents ul.ddp-list-source li em.ddp-icon-mapview1:before {background-position:left top;}
.ddp-page-mapview .ddp-ui-drop-contents ul.ddp-list-source li em.ddp-icon-mapview2:before {background-position:left -16px;}
.ddp-page-mapview .ddp-ui-drop-contents ul.ddp-list-source li em.ddp-icon-mapview3:before {background-position:left -32px;}

.ddp-page-mapview .ddp-ui-cahrt-layout .ddp-ui-layout-center .ddp-icon-mapview-guide {display:inline-block; width:30px; height:28px; margin-right:15px; background:url(../../../images/icon_mapview_guide.png) no-repeat; vertical-align:middle;}
.ddp-page-mapview .ddp-ui-cahrt-layout .ddp-ui-layout-center .ddp-bg-chart-mapview {display:inline-block; width:307px; height:307px; position:absolute; top:50%; left:50%; margin:-154px 0 0 -154px; background:url(../../../images/img_chart/img_map.png) no-repeat;}

/**************************************************************
   맵 차트 remark
**************************************************************/
.ddp-page-mapview .ddp-wrap-remark {position:absolute; top:20px; right:0; bottom:20px; box-sizing:border-box;}
.ddp-page-mapview .ddp-layout-remark {position:relative; min-width:200px;  max-height:100%; background-color:#fff; border:1px solid #e7e7ea; border-radius:2px; overflow:auto; box-sizing:border-box; z-index:10; }
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer {padding:24px 20px;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer + .ddp-ui-layer {border-top:1px solid #ededee;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-label {display:block; padding-bottom:16px; color:#4a515c; font-size:14px; font-weight:bold;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-label + .ddp-data {padding-top:0;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-data {display:block; padding:12px 0 0 0; color:#90969f; font-size:12px;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-list-remark {padding:12px 0 0 0;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-list-remark li {position:relative; max-width:240px; padding-left:20px; color:#4a515c; font-size:12px; vertical-align:middle;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 2; /* 라인수 */
  -webkit-box-orient: vertical;
  word-wrap:break-word;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-list-remark li em.ddp-bg-remark-r,
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-list-remark li em.ddp-bg-remark {display:inline-block; position:absolute; top:1px; left:0; width:14px; height:14px; margin-right:6px;  vertical-align:middle;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-list-remark li em.ddp-bg-remark-r {border-radius:50%;}
.ddp-page-mapview .ddp-layout-remark .ddp-ui-layer .ddp-list-remark li + li {margin-top:14px;}

/**************************************************************
   맵 차트 slider form
**************************************************************/
.ddp-page-mapview .ddp-form-slider {position:relative; padding-right:70px;}
.ddp-page-mapview .ddp-form-slider .ddp-input-typebasic {position:absolute; top:50%; right:0; margin-top:-15px;width:60px;}

.ddp-page-mapview .ddp-form-slider .ddp-box-option-input {position:absolute; top:50%; right:0; margin-top:-15px;width:60px; padding-right:18px;}

.ddp-box-option-input.ddp-type .ddp-txt-input {float:right;}

/**************************************************************
   맵 차트 range
**************************************************************/
.ddp-page-mapview .ddp-ui-chart-side .ddp-filter .ddp-wrap-range  {margin-top:-10px;}
.ddp-page-mapview .ddp-ui-chart-side .ddp-filter .ddp-wrap-range .ddp-data-range {padding-top:0;}
.ddp-page-mapview .ddp-ui-chart-side .ddp-filter .ddp-wrap-range .ddp-data-range .ddp-bar {width:6%; float:left; line-height:30px; text-align:center;}
.ddp-page-mapview .ddp-ui-chart-side .ddp-filter .ddp-wrap-range .ddp-data-range .ddp-box-option-input {float:left; width:47%; margin-left:0; box-sizing:border-box;}
.ddp-page-mapview .ddp-ui-chart-side .ddp-filter .ddp-wrap-range .ddp-data-range input { width:100%; text-align:center;}





/**************************************************************
   맵 차트 tooltip
**************************************************************/
.ddp-map-tooltip .ddp-tooltip-view {display:inline-block; position:absolute; left:90px; bottom:-6px; width:4px; height:8px; background:url(../../../images/icon_tagview.png) no-repeat; transform:rotate(-90deg);}

/* 라이브러리 tooltip */
.ol-viewport {overflow:inherit !important;}

